<resources>
    <string name="app_name">Fragmentos en Kotlin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valtituloprincipal">Fragmentos en Android</string>
    <string name="valrbtmale">Male</string>
    <string name="valrbtfemale">Female</string>
    <string name="valrbtother">Other</string>
    <string name="valchklicense">License</string>
    <string name="valchkcar">Have a car?</string>
    <string name="valbtnsave">SAVE</string>

    <string-array name="country_array">
        <item>Peru</item>
        <item>Venezuela</item>
        <item>Colombia</item>
        <item>Chile</item>
        <item>Ecuador</item>
        <item>Brazil</item>
        <item>Uruguay</item>
    </string-array>
</resources>