<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RegistroFragment" >

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="252dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="251dp"
        android:layout_height="79dp"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperText="Required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullName"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@android:drawable/ic_dialog_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="254dp"
        android:layout_height="142dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <RadioButton
            android:id="@+id/rbtMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtmale" />

        <RadioButton
            android:id="@+id/rbtFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtfemale" />

        <RadioButton
            android:id="@+id/rbtOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtother" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spnCountry"
        android:layout_width="263dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender" />

    <CheckBox
        android:id="@+id/chkLicense"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/valchklicense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCountry" />

    <CheckBox
        android:id="@+id/chkCar"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/valchkcar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCountry" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/valbtnsave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkLicense" />
</androidx.constraintlayout.widget.ConstraintLayout>